syntax = "proto3";

package anychat.common;

option go_package = "github.com/anychat/server/api/proto/common;commonpb";

// Empty 空消息
message Empty {}

// PaginationRequest 分页请求
message PaginationRequest {
  int32 page = 1;       // 页码，从1开始
  int32 page_size = 2;  // 每页大小
}

// PaginationResponse 分页响应
message PaginationResponse {
  int64 total = 1;      // 总记录数
  int32 page = 2;       // 当前页码
  int32 page_size = 3;  // 每页大小
}

// UserInfo 用户基本信息（跨服务共享）
message UserInfo {
  string user_id = 1;
  string nickname = 2;
  string avatar = 3;
  optional string phone = 4;
  optional string email = 5;
}

// TokenInfo Token信息（跨服务共享）
message TokenInfo {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;  // 过期时间（秒）
}
